[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interface/Components/MenuButtons/QuitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interface/Resources/logo.png" type="Texture" id=2]
[ext_resource path="res://Interface/Components/MenuButtons/PlayButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Components/MenuButtons/FleetButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/Animations/2DFadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interface/routing.gd" type="Script" id=6]
[ext_resource path="res://Interface/Resources/Environment/Planet Atmosphere/hdr_main_menu_background.png" type="Texture" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hdr_main_menu_background" type="Sprite" parent="."]
position = Vector2( 620.881, 238.269 )
scale = Vector2( 0.379834, 0.379834 )
texture = ExtResource( 7 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -494.5
margin_top = -200.0
margin_right = 494.5
margin_bottom = 200.0
custom_constants/separation = 77
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 989.0
margin_bottom = 137.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="BoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 214.0
margin_right = 989.0
margin_bottom = 371.0

[node name="Control2" type="Control" parent="Menu/BoxContainer"]
margin_right = 300.0
margin_bottom = 157.0
rect_min_size = Vector2( 300, 0 )

[node name="Controls" type="VBoxContainer" parent="Menu/BoxContainer"]
margin_left = 308.0
margin_right = 681.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 11

[node name="PlayButton" parent="Menu/BoxContainer/Controls" instance=ExtResource( 3 )]
margin_right = 373.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
scene_to_load = "res://Levels/FirstLevel/FirstLevel.tscn"

[node name="FleetButton" parent="Menu/BoxContainer/Controls" instance=ExtResource( 4 )]
margin_top = 56.0
margin_right = 373.0
margin_bottom = 101.0
rect_min_size = Vector2( 0, 45 )
scene_to_load = "res://Interface/Scenes/FleetScreen.tscn"

[node name="QuitButton" parent="Menu/BoxContainer/Controls" instance=ExtResource( 1 )]
margin_top = 112.0
margin_right = 373.0
margin_bottom = 157.0
rect_min_size = Vector2( 0, 45 )

[node name="Control" type="Control" parent="Menu/BoxContainer"]
margin_left = 689.0
margin_right = 989.0
margin_bottom = 157.0
rect_min_size = Vector2( 300, 0 )

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
